limit the rate with which progress is sent via MPRIS

BUG: 416179